--- a/src/css/footer.css
+++ b/src/css/footer.css
@@ -25,7 +25,7 @@
   justify-content: center;
 }
 
-.footer-box .box-top {
+.footer .footer-box .box-top {
   margin-top: 52px;
   width: 100%;
   height: 192px;
@@ -34,7 +34,7 @@
   flex-direction: row;
 }
 
-.box-top .top-menu {
+.footer .box-top .top-menu {
   width: 56px;
   height: 100%;
 
@@ -42,17 +42,17 @@
   flex-direction: column;
 }
 
-.box-top .top-help {
+.footer .box-top .top-help {
   margin-left: 80px;
   width: 160px;
 }
 
-.box-top .top-call {
+.footer .box-top .top-call {
   margin-left: 134px;
   width: 307px;
 }
 
-.box-top .menu-title {
+.footer .box-top .menu-title {
   font-family: "Nunito";
   font-size: 16px;
   font-weight: 700;
@@ -62,12 +62,12 @@
   color: rgb(19, 39, 98);
 }
 
-.box-top .menu-boxes {
+.footer .box-top .menu-boxes {
   display: flex;
   flex-direction: column;
 }
 
-.box-top .box-text {
+.footer .box-top .box-text {
   font-family: "Nunito";
   font-size: 16px;
   font-weight: 400;
@@ -77,13 +77,13 @@
   color: rgb(115, 115, 115);
 }
 
-.box-top .top-img {
+.footer .box-top .top-img {
   margin-left: 80px;
   width: 84px;
   height: 38px;
 }
 
-.footer-box .box-bot {
+.footer .footer-box .box-bot {
   margin-bottom: 54px;
   width: 100%;
   height: 30px;
@@ -94,7 +94,7 @@
   justify-content: space-between;
 }
 
-.box-bot .bot-box {
+.footer .box-bot .bot-box {
   width: 100px;
   height: 100%;
 
@@ -104,7 +104,7 @@
   justify-content: space-between;
 }
 
-.box-bot .bot-text {
+.footer .box-bot .bot-text {
   font-family: "Nunito";
   font-size: 16px;
   font-weight: 400;
@@ -112,4 +112,72 @@
   letter-spacing: 0px;
   text-align: left;
   color: rgb(115, 115, 115);
+}
+
+/* OTHER FOOTER*/
+
+.other-footer {
+  position: relative;
+  width: 100%;
+  height: 339px;
+
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background-color: rgb(43, 63, 117);
+}
+
+.other-footer .other-title {
+  margin-top: 89px;
+  margin-bottom: 48px;
+  font-family: "Nunito" Black;
+  font-size: 39px;
+  font-weight: 900;
+  line-height: 52px;
+  letter-spacing: 0px;
+  text-align: left;
+  color: rgb(255, 255, 255);
+}
+
+.other-footer .other-box {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+}
+
+.other-footer .other-box .other-button {
+  width: 200px;
+  height: 50px;
+
+  font-family: "Nunito ExtraBold";
+  font-size: 14px;
+  font-weight: 800;
+  line-height: 19px;
+  letter-spacing: 0px;
+  text-align: right;
+  color: rgb(255, 255, 255);
+
+  border-radius: 7px;
+  background: rgb(255, 216, 129);
+}
+
+.other-footer .other-box input {
+  margin-right: 10px;
+  padding-right: 450px;
+  padding-bottom: 15px;
+
+  font-family: "Nunito";
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 19px;
+  letter-spacing: 0px;
+  text-align: left;
+  color: rgb(255, 255, 255);
+  background-color: rgb(43, 63, 117);
+
+  outline: none;
+  border: none;
+  border-bottom: 1px solid rgb(255, 255, 255);
+  opacity: 0.4;
 }
