--- a/src/css/header.css
+++ b/src/css/header.css
@@ -59,3 +59,125 @@
   align-items: center;
   justify-content: space-between;
 }
+
+/* Basket */
+
+.basket-frame {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+
+.basket {
+  position: relative;
+  width: 370px;
+  height: 251px;
+  border-radius: 11px 11px 0px 0px;
+
+  display: flex;
+  flex-direction: column;
+}
+
+.basket .basket-product {
+  margin-top: 5px;
+  width: 100%;
+  height: 120px;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+
+  border-radius: 11px 11px 0px 0px;
+  background: rgb(253, 250, 245);
+}
+
+.basket-product .product-box {
+  width: 330px;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.product-box .product-image {
+  width: 80px;
+  height: 80px;
+}
+
+.product-box .product-desc {
+  display: flex;
+  flex-direction: column;
+}
+
+.basket .basket-buttons {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-around;
+}
+
+.basket-buttons .basket-total {
+  margin-top: 14px;
+  width: 330px;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: flex-start;
+}
+
+.total-text {
+  font-family: "Nunito";
+  font-size: 16px;
+  font-weight: 700;
+  line-height: 23px;
+  letter-spacing: 0px;
+  text-align: left;
+  color: rgb(19, 39, 98);
+}
+
+.price-text {
+  font-family: "Nunito";
+  font-size: 16px;
+  font-weight: 700;
+  line-height: 23px;
+  letter-spacing: 0px;
+  text-align: left;
+  color: rgba(255, 0, 0, 0.49);
+}
+
+.basket-buttons .basket-button-box {
+  margin-top: 13px;
+  width: 330px;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.basket-button-box .view-button {
+  width: 148px;
+  height: 50px;
+  font-family: "Nunito ExtraBold";
+  font-size: 14px;
+  font-weight: 800;
+  line-height: 19px;
+  letter-spacing: 0px;
+  text-align: left;
+  border-radius: 8px;
+  color: rgb(255, 255, 255);
+  background: rgb(255, 184, 204);
+}
+
+.basket-button-box .check-button {
+  width: 148px;
+  height: 50px;
+  font-family: "Nunito ExtraBold";
+  font-size: 14px;
+  font-weight: 800;
+  line-height: 19px;
+  letter-spacing: 0px;
+  text-align: left;
+  border-radius: 8px;
+  color: rgb(255, 255, 255);
+  background: rgb(255, 216, 129);
+}
