--- a/src/css/home.css
+++ b/src/css/home.css
@@ -102,7 +102,7 @@
 
 .shop-categories {
   position: relative;
-  padding-top: 129px;
+  padding-top: 128px;
   width: 100%;
   height: auto;
   display: flex;
@@ -114,7 +114,7 @@
 
 .shop-categories .shop-categories-container {
   width: 100%;
-  height: 646px;
+  height: 546px;
 
   display: flex;
   flex-direction: column;
@@ -142,7 +142,7 @@
 
 .shop-categories-menu .shop-box {
   width: 300px;
-  height: 450px;
+  height: 350px;
 
   display: flex;
   flex-direction: column;
@@ -162,16 +162,18 @@
   flex-direction: row;
   align-items: center;
   justify-content: center;
+  border-radius: 16px;
 }
 
 .shop-box .img {
   width: 300px;
-  height: 450px;
+  height: 340px;
+  border-radius: 16px;
 }
 
 .shop-box .text {
   position: absolute;
-  margin-top: 350px;
+  margin-top: 250px;
   font-family: "Nunito ExtraBold";
   font-size: 20px;
   font-weight: 800;
@@ -215,3 +217,259 @@
 }
 
 /* < == pagination */
+
+/* Best Seller */
+
+.best-seller {
+  padding-top: 128px;
+  position: relative;
+  width: 100%;
+  height: 706px;
+
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  background-color: rgb(255, 255, 255);
+}
+
+.best-seller .best-container {
+  width: 100%;
+  height: auto;
+
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+}
+
+.best-seller .best-container .best-boxs {
+  width: 100%;
+  height: 706px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.best-seller .best-boxs .best-title {
+  font-family: "Nunito" Black;
+  font-size: 39px;
+  font-weight: 900;
+  line-height: 52px;
+  letter-spacing: 0px;
+  text-align: left;
+  color: rgb(19, 39, 98);
+}
+
+.best-seller .best-boxs .best-card {
+  margin-top: 47px;
+  width: 100%;
+  height: 390px;
+
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.best-seller .best-card .card-box {
+  position: relative;
+  width: 300px;
+  height: 390px;
+
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
+
+  border-top-left-radius: 12px;
+  border-top-right-radius: 12px;
+}
+
+.best-seller .card-box .card-img {
+  position: relative;
+  width: 300px;
+  height: 300px;
+
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+
+  box-sizing: border-box;
+  border: 1px solid rgb(240, 240, 240);
+  border-radius: 12px;
+}
+
+.best-seller .card-img .card-badge {
+  margin-top: 15px;
+  margin-left: 15px;
+
+  width: 92px;
+  height: 35px;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+
+  font-family: "Nunito";
+  font-size: 14px;
+  font-weight: 700;
+  line-height: 19px;
+  letter-spacing: 0px;
+  text-align: left;
+  color: rgb(255, 255, 255);
+
+  border-radius: 4px;
+  background: rgb(255, 184, 204);
+}
+
+.best-seller .card-img .card-badge1 {
+  margin-top: 15px;
+  margin-left: 15px;
+
+  width: 92px;
+  height: 35px;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+
+  font-family: "Nunito";
+  font-size: 14px;
+  font-weight: 700;
+  line-height: 19px;
+  letter-spacing: 0px;
+  text-align: left;
+  color: rgb(255, 255, 255);
+
+  border-radius: 4px;
+  background: rgb(134, 212, 245);
+}
+
+/* card img hover */
+.best-seller .card-img:hover {
+  border-radius: 12px;
+  background: rgb(255, 255, 255);
+  opacity: 0.95;
+}
+
+.best-seller .card-img .card-button {
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 200px;
+  height: 110px;
+  position: absolute;
+  display: none;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.best-seller .card-img:hover .card-button {
+  display: flex;
+}
+
+.best-seller .card-img .card-button .button {
+  width: 200px;
+  height: 50px;
+
+  font-family: "Nunito ExtraBold";
+  font-size: 14px;
+  font-weight: 800;
+  line-height: 19px;
+  letter-spacing: 0px;
+  text-align: center;
+  color: rgb(19, 39, 98);
+  background: rgb(255, 255, 255);
+  border-radius: 7px;
+}
+
+.best-seller .card-img .card-button .button:hover {
+  color: rgb(255, 255, 255);
+  background: rgb(255, 216, 129);
+}
+
+.best-seller .card-box .card-text {
+  width: 300px;
+  height: 90px;
+
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: flex-end;
+}
+
+.best-seller .card-text .product-name {
+  font-family: "Nunito";
+  font-size: 16px;
+  font-weight: 700;
+  line-height: 23px;
+  letter-spacing: 0px;
+  text-align: left;
+  color: rgb(19, 39, 98);
+}
+
+.best-seller .card-text .product-color {
+  font-family: "Nunito";
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 30px;
+  letter-spacing: 0px;
+  text-align: left;
+  color: rgb(115, 115, 115);
+}
+
+.best-seller .card-text .product-price {
+  font-family: "Nunito";
+  font-size: 16px;
+  font-weight: 700;
+  line-height: 22px;
+  letter-spacing: 0px;
+  text-align: center;
+  color: rgba(255, 0, 0, 0.49);
+}
+
+.best-seller .best-boxs .best-pagination {
+  margin-top: 60px;
+  width: 120px;
+  height: 30px;
+
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.best-seller .best-boxs .best-pagination .pagination {
+  width: 30px;
+  height: 30px;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+
+  border-radius: 50%;
+  background: rgb(255, 216, 129);
+}
+
+/* not avaible */
+
+.not-vaible {
+  width: 100%;
+  height: 390px;
+
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+
+  font-family: "Nunito" Black;
+  font-size: 39px;
+  font-weight: 900;
+  line-height: 52px;
+  letter-spacing: 0px;
+  text-align: left;
+  color: rgb(19, 39, 98);
+}
