--- a/src/css/home.css
+++ b/src/css/home.css
@@ -454,6 +454,121 @@
   background: rgb(255, 216, 129);
 }
 
+/* Sale shop */
+
+.sale-shop {
+  position: relative;
+  width: 100%;
+  height: 772px;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: flex-end;
+  background-color: rgb(255, 255, 255);
+}
+
+.sale-shop .sale-shop-div {
+  position: relative;
+  width: 100%;
+  height: 644px;
+  display: flex;
+}
+
+.sale-shop .sale-shop-div .left {
+  flex: 1;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: flex-end;
+
+  background: linear-gradient(
+    0deg,
+    rgba(255, 255, 255, 0),
+    rgba(253, 250, 245, 0.5) 100%
+  );
+}
+
+.sale-shop .sale-shop-div .right {
+  flex: 1;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: flex-start;
+  background: rgb(253, 250, 245);
+}
+
+.sale-shop .sale-shop-div .right .right-box {
+  margin-left: 180px;
+  width: 397px;
+  height: 242px;
+
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: space-between;
+}
+
+.sale-shop .sale-shop-div .right .right-box .box-title {
+  font-family: "Nunito Black";
+  font-size: 39px;
+  font-weight: 900;
+  line-height: 52px;
+  letter-spacing: 0px;
+  text-align: left;
+  color: rgb(19, 39, 98);
+}
+
+.sale-shop .sale-shop-div .right .right-box .box-text {
+  font-family: "Nunito";
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 30px;
+  letter-spacing: 0px;
+  text-align: left;
+  color: rgb(115, 115, 115);
+}
+
+.sale-shop .sale-shop-div .right .right-box .box-button {
+  width: 200px;
+  height: 50px;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+
+  font-family: "Nunito ExtraBold";
+  font-size: 14px;
+  font-weight: 800;
+  line-height: 19px;
+  letter-spacing: 0px;
+  text-align: right;
+
+  border-radius: 7px;
+  color: rgb(255, 255, 255);
+  background: rgb(255, 216, 129);
+}
+
+.sale-shop .left .left-text {
+  margin-right: 180px;
+  padding-left: 35px;
+  width: 362px;
+  height: 112px;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+
+  font-family: "Nunito Black";
+  font-size: 49px;
+  font-weight: 900;
+  line-height: 87px;
+  letter-spacing: 35px;
+  color: rgb(255, 255, 255);
+
+  border-radius: 12px;
+  background: rgb(134, 212, 245);
+}
+
 /* not avaible */
 
 .not-vaible {
