--- a/src/css/home.css
+++ b/src/css/home.css
@@ -569,6 +569,61 @@
   background: rgb(134, 212, 245);
 }
 
+/* Brands we Love */
+
+.brands-we {
+  width: 100%;
+  height: 383px;
+
+  display: flex;
+  flex-direction: row;
+  align-items: flex-end;
+  justify-content: center;
+  background-color: rgb(255, 255, 255);
+}
+
+.brands-we .brands-container {
+  position: relative;
+  width: 795px;
+  height: 255px;
+
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
+  background-color: rgb(255, 255, 255);
+}
+
+.brands-we .brands-container .brand-title {
+  font-family: "Nunito Black";
+  font-size: 39px;
+  font-weight: 900;
+  line-height: 52px;
+  letter-spacing: 0px;
+  text-align: left;
+  color: rgb(19, 39, 98);
+}
+
+.brands-we .brands-container .brand-text {
+  font-family: "Nunito";
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 30px;
+  letter-spacing: 0px;
+  text-align: center;
+  color: rgb(115, 115, 115);
+}
+
+.brands-we .brands-container .brand-box {
+  width: 100%;
+  height: 55px;
+
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+}
+
 /* not avaible */
 
 .not-vaible {
