--- a/src/css/footer.css
+++ b/src/css/footer.css
@@ -6,12 +6,14 @@
   display: flex;
   flex-direction: row;
   justify-content: center;
+  background-color: rgb(255, 255, 255);
 }
 
 .footer .footer-container {
   display: flex;
   flex-direction: row;
   justify-content: center;
+  background-color: rgb(255, 255, 255);
 }
 
 .footer .footer-container .footer-box {
