--- a/src/css/common.css
+++ b/src/css/common.css
@@ -12,3 +12,43 @@ a {
   padding: 10px 16px;
   border-radius: 3px;
 }
+
+.other-shop {
+  width: 100%;
+  height: 320px;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+
+  background: rgb(253, 250, 245);
+}
+
+.other-shop .other-shop-container {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: center;
+}
+
+.other-shop .other-shop-container .shop-title {
+  font-family: "Nunito Black";
+  font-size: 49px;
+  font-weight: 900;
+  line-height: 87px;
+  letter-spacing: 0px;
+  text-align: left;
+  color: rgb(19, 39, 98);
+}
+
+.other-shop .other-shop-container .shop-text {
+  font-family: "Nunito";
+  font-size: 12px;
+  font-weight: 400;
+  line-height: 16px;
+  letter-spacing: 0px;
+  text-align: left;
+  color: rgb(115, 115, 115);
+}
