--- a/src/css/footer.css
+++ b/src/css/footer.css
@@ -6,14 +6,15 @@
   display: flex;
   flex-direction: row;
   justify-content: center;
-  background-color: rgb(255, 255, 255);
+
+  background: rgb(242, 242, 242);
 }
 
 .footer .footer-container {
   display: flex;
   flex-direction: row;
   justify-content: center;
-  background-color: rgb(255, 255, 255);
+  background: rgb(242, 242, 242);
 }
 
 .footer .footer-container .footer-box {
