--- a/src/css/common.css
+++ b/src/css/common.css
@@ -52,3 +52,85 @@ a {
   text-align: left;
   color: rgb(115, 115, 115);
 }
+
+.other-about {
+  width: 100%;
+  height: 320px;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+
+  background: rgb(253, 250, 245);
+}
+
+.other-about .other-about-container {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: center;
+}
+
+.other-about .other-about-container .about-title {
+  font-family: "Nunito Black";
+  font-size: 49px;
+  font-weight: 900;
+  line-height: 87px;
+  letter-spacing: 0px;
+  text-align: left;
+  color: rgb(19, 39, 98);
+}
+
+.other-about .other-about-container .about-text {
+  font-family: "Nunito";
+  font-size: 12px;
+  font-weight: 400;
+  line-height: 16px;
+  letter-spacing: 0px;
+  text-align: left;
+  color: rgb(115, 115, 115);
+}
+
+/*contacts*/
+
+.other-contact {
+  width: 100%;
+  height: 320px;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+
+  background: rgb(253, 250, 245);
+}
+
+.other-contact .other-contact-container {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: center;
+}
+
+.other-contact .other-contact-container .contact-title {
+  font-family: "Nunito Black";
+  font-size: 49px;
+  font-weight: 900;
+  line-height: 87px;
+  letter-spacing: 0px;
+  text-align: left;
+  color: rgb(19, 39, 98);
+}
+
+.other-contact .other-contact-container .contact-text {
+  font-family: "Nunito";
+  font-size: 12px;
+  font-weight: 400;
+  line-height: 16px;
+  letter-spacing: 0px;
+  text-align: left;
+  color: rgb(115, 115, 115);
+}
