--- a/src/css/common.css
+++ b/src/css/common.css
@@ -95,7 +95,7 @@ a {
 
 /*contacts*/
 
-.other-contact {
+.other-journal {
   width: 100%;
   height: 320px;
   display: flex;
@@ -106,7 +106,7 @@ a {
   background: rgb(253, 250, 245);
 }
 
-.other-contact .other-contact-container {
+.other-journal .other-journal-container {
   width: 100%;
   height: 100%;
   display: flex;
@@ -115,7 +115,47 @@ a {
   justify-content: center;
 }
 
-.other-contact .other-contact-container .contact-title {
+.other-journal .other-journal-container .journal-title {
+  font-family: "Nunito Black";
+  font-size: 49px;
+  font-weight: 900;
+  line-height: 87px;
+  letter-spacing: 0px;
+  text-align: left;
+  color: rgb(19, 39, 98);
+}
+
+.other-journal .other-journal-container .journal-text {
+  font-family: "Nunito";
+  font-size: 12px;
+  font-weight: 400;
+  line-height: 16px;
+  letter-spacing: 0px;
+  text-align: left;
+  color: rgb(115, 115, 115);
+}
+
+.other-journal {
+  width: 100%;
+  height: 320px;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+
+  background: rgb(253, 250, 245);
+}
+
+.other-journal .other-journal-container {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: center;
+}
+
+.other-journal .other-journal-container .journal-title {
   font-family: "Nunito Black";
   font-size: 49px;
   font-weight: 900;
