--- a/src/css/user.css
+++ b/src/css/user.css
@@ -197,8 +197,133 @@
 .user-page .container .signup {
   position: relative;
   width: 100%;
-  height: 400px;
-  background-color: rgb(150, 187, 255);
+  height: auto;
+
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+}
+
+.signup .sn {
+  margin-bottom: 57px;
+  width: 644px;
+  height: 60px;
+
+  font-family: "Nunito";
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 30px;
+  letter-spacing: 0px;
+  text-align: left;
+  color: rgb(115, 115, 115);
+}
+
+.signup .signup-input {
+  width: 100%;
+  height: 200px;
+  background-color: red;
+}
+
+.signup .button-box {
+  margin-top: 136px;
+  width: 100%;
+  height: auto;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+
+.signup .button-box .sign-button {
+  width: 300px;
+  height: auto;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+}
+
+.signup .button-box .sign-button .duvs {
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+
+.signup .button-box .sign-button .duvs input {
+  box-sizing: border-box;
+  border: 1px solid rgb(115, 115, 115);
+  border-radius: 2px;
+}
+
+.signup .button-box .sign-button .duvs span {
+  margin-left: 5px;
+  font-family: "Nunito";
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 19px;
+  letter-spacing: 0px;
+  text-align: left;
+  color: rgb(115, 115, 115);
+}
+
+.signup .button-box .sign-button .sign {
+  margin-top: 26px;
+  width: 200px;
+  height: 50px;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+
+  font-family: "Nunito ExtraBold";
+  font-size: 14px;
+  font-weight: 800;
+  line-height: 19px;
+  letter-spacing: 0px;
+  text-align: center;
+  color: rgb(255, 255, 255);
+
+  border-radius: 7px;
+  background: rgb(255, 216, 129);
+}
+
+.signup .button-box .continue {
+  margin-left: 200px;
+  width: 300px;
+  height: auto;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+}
+
+.signup .button-box .continue span {
+  font-family: "Nunito";
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 19px;
+  letter-spacing: 0px;
+  text-align: left;
+  color: rgb(115, 115, 115);
+}
+
+.signup .button-box .continue .conn {
+  margin-top: 26px;
+  width: 200px;
+  height: 50px;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+
+  font-family: "Nunito ExtraBold";
+  font-size: 14px;
+  font-weight: 800;
+  line-height: 19px;
+  letter-spacing: 0px;
+  text-align: center;
+  color: rgb(255, 255, 255);
+
+  border-radius: 7px;
+  background: rgb(255, 184, 204);
 }
 
 /* card */
