--- a/src/css/user.css
+++ b/src/css/user.css
@@ -437,6 +437,316 @@
 .user-page .container .account {
   position: relative;
   width: 100%;
-  height: 400px;
-  background-color: rgb(150, 187, 255);
+  height: auto;
+
+  display: flex;
+  flex-direction: row;
+  align-items: flex-start;
+  justify-content: space-between;
+}
+
+.account .menu-box {
+  width: 234px;
+  height: auto;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.account .menu-box .box {
+  width: 100%;
+  height: 50px;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: flex-start;
+
+  border: 1px solid #f6f6f6;
+}
+
+.account .menu-box .box .detail {
+  font-family: "Nunito ExtraBold";
+  font-size: 16px;
+  font-weight: 800;
+  line-height: 30px;
+  letter-spacing: 0px;
+  text-align: left;
+  color: rgb(19, 39, 98);
+  cursor: pointer;
+}
+
+.account .menu-box .box span {
+  font-family: "Nunito";
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 30px;
+  letter-spacing: 0px;
+  text-align: left;
+  color: rgb(115, 115, 115);
+  cursor: pointer;
+}
+
+.account .menu-box .box span:active {
+  font-family: "Nunito ExtraBold";
+  font-size: 16px;
+  font-weight: 800;
+  line-height: 30px;
+  letter-spacing: 0px;
+  text-align: left;
+  color: rgb(19, 39, 98);
+  cursor: pointer;
+}
+
+.account .deatil-box {
+  width: 1000px;
+  height: auto;
+
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+}
+
+.account .deatil-box .signup-input {
+  width: 100%;
+  height: auto;
+
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.account .deatil-box .signup-input .box {
+  width: 100%;
+  height: auto;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+}
+
+.account .deatil-box .signup-input .box .stext {
+  margin-bottom: 48px;
+  font-family: "Nunito Black";
+  font-size: 39px;
+  font-weight: 900;
+  line-height: 52px;
+  letter-spacing: 0px;
+  text-align: left;
+  color: rgb(19, 39, 98);
+}
+
+.account .deatil-box .signup-input .box .inputs {
+  margin-bottom: 24px;
+  width: 1000px;
+  height: 68px;
+
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.account .deatil-box .signup-input .box .inputs .input {
+  width: 450px;
+  height: 68px;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: space-between;
+  border: 1px solid #f6f6f6;
+  box-shadow: rgba(138, 138, 138, 0.08) 0px 4px 12px;
+}
+
+.account .deatil-box .signup-input .box .inputs .input .text {
+  font-family: "Nunito";
+  font-size: 16px;
+  font-weight: 700;
+  line-height: 23px;
+  letter-spacing: 0px;
+  text-align: left;
+  color: rgb(19, 39, 98);
+}
+
+.account .deatil-box .signup-input .box .inputs .input input {
+  width: 100%;
+  height: 49px;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: flex-start;
+
+  font-family: "Nunito";
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 19px;
+  letter-spacing: 0px;
+  text-align: left;
+  color: rgb(115, 115, 115);
+  border: none;
+  outline: none;
+}
+
+.account .deatil-box .signup-input .box .inputs .input select {
+  width: 100%;
+  height: 49px;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: flex-start;
+
+  font-family: "Nunito";
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 19px;
+  letter-spacing: 0px;
+  text-align: left;
+  color: rgb(115, 115, 115);
+  border: none;
+  outline: none;
+}
+
+.account .deatil-box .button-box {
+  margin-top: 50px;
+  width: 100%;
+  height: auto;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: flex-end;
+}
+
+.account .deatil-box .button-box .sign-button {
+  width: 200px;
+  height: auto;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+}
+
+.account .deatil-box .button-box .sign-button .duvs {
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+
+.account .deatil-box .button-box .sign-button .duvs input {
+  box-sizing: border-box;
+  border: 1px solid rgb(115, 115, 115);
+  border-radius: 2px;
+}
+
+.account .deatil-box .button-box .sign-button .duvs span {
+  margin-left: 5px;
+  font-family: "Nunito";
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 19px;
+  letter-spacing: 0px;
+  text-align: left;
+  color: rgb(115, 115, 115);
+}
+
+.account .deatil-box .button-box .sign-button .sign {
+  margin-top: 26px;
+  width: 200px;
+  height: 50px;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+
+  font-family: "Nunito ExtraBold";
+  font-size: 14px;
+  font-weight: 800;
+  line-height: 19px;
+  letter-spacing: 0px;
+  text-align: center;
+  color: rgb(255, 255, 255);
+
+  border-radius: 7px;
+  background: rgb(255, 216, 129);
+}
+
+.account .deatil-box .button-box .continue {
+  margin-left: 200px;
+  width: 300px;
+  height: auto;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+}
+
+.account .deatil-box .button-box .continue span {
+  font-family: "Nunito";
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 19px;
+  letter-spacing: 0px;
+  text-align: left;
+  color: rgb(115, 115, 115);
+}
+
+.account .deatil-box .button-box .continue .conn {
+  margin-top: 26px;
+  width: 200px;
+  height: 50px;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+
+  font-family: "Nunito ExtraBold";
+  font-size: 14px;
+  font-weight: 800;
+  line-height: 19px;
+  letter-spacing: 0px;
+  text-align: center;
+  color: rgb(255, 255, 255);
+
+  border-radius: 7px;
+  background: rgb(255, 184, 204);
+}
+
+.account .deatil-box .boxes {
+  width: 100%;
+  height: 100px;
+
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: flex-end;
+}
+
+.account .deatil-box .boxes img {
+  margin-right: 50px;
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+}
+
+.account .deatil-box .boxes .file {
+  margin-right: 50px;
+  width: 100px;
+  height: 30px;
+
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+
+  font-family: "Nunito ExtraBold";
+  font-size: 12px;
+  font-weight: 800;
+  line-height: 19px;
+  letter-spacing: 0px;
+  text-align: center;
+  color: rgb(255, 255, 255);
+
+  background: #86d4f5;
+  cursor: pointer;
+  border-radius: 8px;
+}
+
+.account .deatil-box .boxes .file input {
+  display: none;
 }
