--- a/src/css/shop.css
+++ b/src/css/shop.css
@@ -172,6 +172,28 @@
   align-items: center; */
 }
 
+.product-page .product-box .serach {
+  margin-bottom: 90px;
+  width: 100%;
+  height: 71px;
+  padding-left: 21px;
+
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: flex-start;
+
+  font-family: "Nunito";
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 30px;
+  letter-spacing: 0px;
+  text-align: left;
+  color: rgb(115, 115, 115);
+  outline: none;
+  border: 1px solid #f6f6f6;
+}
+
 .product-page .product-box .product-div {
   margin-bottom: 90px;
   position: relative;
