--- a/src/css/shop.css
+++ b/src/css/shop.css
@@ -71,6 +71,26 @@
   cursor: pointer;
 }
 
+.product-page .menu-box .box:active {
+  font-family: "Nunito ExtraBold";
+  font-size: 14px;
+  font-weight: 800;
+  line-height: 19px;
+  letter-spacing: 0px;
+  text-align: left;
+  color: rgb(19, 39, 98);
+}
+
+.product-page .menu-box .box-color:active {
+  font-family: "Nunito ExtraBold";
+  font-size: 14px;
+  font-weight: 800;
+  line-height: 19px;
+  letter-spacing: 0px;
+  text-align: left;
+  color: rgb(19, 39, 98);
+}
+
 .product-page .menu-box .box-color {
   width: 100%;
   height: 30px;
@@ -292,6 +312,7 @@
   box-sizing: border-box;
   border: 1px solid rgb(240, 240, 240);
   border-radius: 4px;
+  outline: none;
 }
 
 .product-page .sort .sort-select-num {
@@ -309,6 +330,7 @@
   box-sizing: border-box;
   border: 1px solid rgb(240, 240, 240);
   border-radius: 4px;
+  outline: none;
 }
 
 .product-page .best-card {
